test_suite5/ALAN/test_suite/alan-2022-examples/failing/005390_mutation.alan
source S7QDa begin leave integer(0972) end
